fixed text and button alignment

--- a/style.css
+++ b/style.css
@@ -151,8 +151,6 @@ h1.information {
     gap: 16px;
     padding: 16px;
     margin:80px;
-    justify-content: center;
-    align-items: center;
 }
 
 .header-call,
@@ -167,3 +165,9 @@ h1.information {
 .call-text {
     font-weight: lighter;
 }
+
+button.call-button {
+    background: #3882F6;
+    border: 1px solid #E5E7EB;
+    color: white;
+  }
